--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Login Form</title>
+<title>Login</title>
 
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -13,30 +13,40 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/loginUser}" th:object="${loginuser}" method="post" class="form-horizontal" role="form">
+
+				<form autocomplete="off" action="#" th:action="@{/loginUser}"
+					th:object="${user}" method="post" class="form-horizontal"
+					role="form">
 					<h2>Login Form</h2>
-					
-					
+
+
 					<div class="form-group">
 						<div class="col-sm-9">
-							<input type="text" th:field="*{email}" placeholder="Enter the email" class="form-control" />
+							<input type="text" th:field="*{email}"
+								placeholder="Enter the email" class="form-control" />
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="col-sm-9">
-							<input type="password" th:field="*{password}" placeholder="Enter the password" class="form-control" />
+							<input type="password" th:field="*{password}"
+								placeholder="Enter the password" class="form-control" />
 						</div>
 					</div>
-				
+
 					<div class="form-group">
 						<div class="col-sm-9">
 							<button type="submit" class="btn btn-primary btn-block">Submit</button>
 						</div>
 					</div>
+
+					Don't have an account? <a href="#" th:href="@{/registration}">Sign
+						up here</a>
 				</form>
+
 			</div>
 		</div>
 	</div>
 
 </body>
 </html>
+
