--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -5,7 +5,7 @@
 	padding-bottom: 10px;
 	margin:10px;
 	display: inline-block;
-	background-color:#ff80ff;
+	background-color:#cce6ff;
 	word-break: break-all;
 }
 
