--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -72,12 +72,20 @@
 										
 										<div class="modal-body">
 										
-											<form action="#" th:action="@{/user/addNote}" th:object="${note}"
-													method="post" role="form">
-												<input type="text" th:field="*{title}" /><br />
+											<form action="#" th:action="@{/user/addNote}" th:object="${note}" method="post" role="form">
 												
-												<input type="text" th:field="*{description}" /><br /> 
-												<input type="submit" class="btn" th:value="submit" />
+												<table style="width:100%">
+													  
+													  <tr> 
+													  	<td>Title : </td>
+													    <td><input type="text" th:field="*{title}" /></td>
+													 </tr>
+													 
+													   <tr>     <td>Description : </td>  
+													    <td><input type="text" th:field="*{description}" /></td> 
+													   </tr> 
+												</table>
+												<input type="submit"  th:value="submit" />
 												
 											</form>
 											
@@ -92,16 +100,17 @@
 			<div class="container" id="noteContainer"> 
 				<div class="row">
 						<div class="col-12-xs col-12-sm col-12-md col-12-lg">
-							<div>
+							<div style="margin-left: 120px;">
 								<h3>All Notes</h3>
 								<div th:each="note : ${allNotes}" id="card">
 									<div th:text="${note.title}"></div><br />
 									<div th:text="${note.description}"></div><br />
 									<div>									
 										<span class="glyphicon glyphicon-trash btn" th:onclick="'deleteNote('+ *{note.noteId} +')'"></span>
+									
 										<span class="glyphicon glyphicon-edit btn" data-toggle="modal" data-target="#myModal1"></span>
 										
-								
+										
 										
 											<div class="modal fade" id="myModal1" role="dialog">
 												<div class="modal-dialog">
