--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -3,13 +3,51 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Login</title>
-
+<link th:href="@{/css/home.css}" href="/css/home.css"  rel="stylesheet" type="text/css"  />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
+
+<div class="container" id="login-abc">
+	<div class="col-xs-12 col-sm-12 col-md-12">
+				<h1>Sign in</h1>
+				<form autocomplete="off" action="#" th:action="@{/loginUser}"
+					th:object="${user}" method="post" class="form-horizontal"
+					role="form">
+					
+					<div class="form-group">
+						<label class="col-sm-12" for="email"></label> 
+						<input type="text" th:field="*{email}"
+								placeholder="Enter the email" class="form-control" /> 
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-12" for="password"></label> 
+						<input type="password" th:field="*{password}"
+								placeholder="Enter the password" class="form-control" />
+					</div>
+
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary btn-block">Submit</button>
+					</div>
+					
+					<p>
+						Don't have an account?<a href="#" th:href="@{/registration}">Sign Up</a>
+					</p>
+					
+				</form>
+			</div>
+	</div>
+
+
+
+<!-- 
+
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -46,7 +84,7 @@
 			</div>
 		</div>
 	</div>
-
+ -->
 </body>
 </html>
 
