--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -1,4 +1,3 @@
-
 #card {
 	width:300px;
 	padding:10px;
@@ -24,4 +23,12 @@
 	transition: 0.3s;
 	padding-top: 7%;
 	background-color: #e6f2ff;
+}
+
+
+#login-abc {
+	background-color: #b3ffff;
+	padding : 50px;
+	margin : 20px;
+	max-width: 350px;
 }
