--- a/src/main/webapp/WEB-INF/templates/archive.html
+++ b/src/main/webapp/WEB-INF/templates/archive.html
@@ -22,7 +22,7 @@
 
 <input  id="jwt" th:value="${token}" /> 
 
-		<div th:fragment="navbar" class="navbar navbar-fixed-top" style="background-color: #ffbb33">
+		<div th:fragment="navbar" class="navbar navbar-fixed-top" style="background-color: #39ac73">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<div class="navbar-inner">
@@ -103,7 +103,7 @@
 						<div class="col-12-xs col-12-sm col-12-md col-12-lg">
 							<div style="margin-left: 120px;">
 								<h3>All Notes</h3>
-									<div th:each="note : ${allNotes}" id="card" th:if="${note.archiveStatus!='true' && note.trashStatus!='true'}>
+									<div th:each="note : ${allNotes}" id="card" th:if="${note.archiveStatus=='true' && note.trashStatus!='true'}>
 										
 										<div data-toggle="modal" data-target="#myModal1">
 										
