--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -4,7 +4,7 @@
 	padding-bottom: 10px;
 	margin:10px;
 	display: inline-block;
-	background-color:#cce6ff;
+	background-color:#ffe6ff;
 	word-break: break-all;
 }
 
@@ -22,7 +22,7 @@
 	overflow-x: hidden;
 	transition: 0.3s;
 	padding-top: 7%;
-	background-color: #ffcce6;
+	background-color: #e6e6e6;
 }
 
 
