--- a/src/main/webapp/WEB-INF/templates/viewTaxDetails.html
+++ b/src/main/webapp/WEB-INF/templates/viewTaxDetails.html
@@ -17,17 +17,9 @@
 <title>ToDo</title>
 </head>
 <body>
-	<div th:each="taxDetailsById1 : ${taxDetailsById}">
-					<table>
-				
-					<tr>
-						<td th:text="${taxDetailsById1.docName}"></td>
-						<td th:text="${taxDetailsById1.docType}"></td>
-						<td th:text="${taxDetailsById1.docAmount}"></td>
-						<td th:text="${taxDetailsById1.tax}"></td>
-						<td th:text="${taxDetailsById1.taxType}"></td>
-					</tr>
-					</table>
-	</div>
+	<h2>View Details </h2>
+	
+	<div th:text="${taxDetailsById}"></div>
+	
 </body>
 </html>
