--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -137,7 +137,7 @@
 							 					</a>
 											</span>
 											
-											<div class="dropdown inline">
+											<span class="dropdown inline">
 												<span class="btn dropdown-toggle" id="menu1" data-toggle="dropdown">
 													<img th:src="@{/image/more-vert.svg}" height="18px" /> 
 												</span>
@@ -148,7 +148,7 @@
 													<li><a th:href="${'copy/' + note.noteId}">Make a Copy</a></li>
 													<li><a th:onclick="'fbAsyncSocialShare(note)'">Social Share</a></li>
 												</ul>
-											</div>
+											</span>
 											
 											
 										</div>
