--- a/src/main/webapp/WEB-INF/templates/registration.html
+++ b/src/main/webapp/WEB-INF/templates/registration.html
@@ -23,7 +23,7 @@
 		       	<input type="text" th:field="*{lastName}" placeholder="Enter last name" class="form-control" />
 		       	<input type="text" th:field="*{email}" placeholder="Enter the email" class="form-control" />
 		       	<input type="password" th:field="*{password}" placeholder="Enter the password" class="form-control" />
-		       	<input type="text" th:field="*{mobileNumber}" placeholder="Enter the mobile number" class="form-control" />
+		       	<input type="number" th:field="*{mobileNumber}" placeholder="Enter the mobile number" class="form-control" />
 				<br />
 				<button type="submit" class="btn btn-danger" style="padding: 10px;">Submit</button>
 				
