--- a/src/main/webapp/WEB-INF/templates/insertdetails.html
+++ b/src/main/webapp/WEB-INF/templates/insertdetails.html
@@ -2,58 +2,37 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Registration Form</title>
-
+<title>form</title>
+<link th:href="@{/css/home.css}" href="/css/home.css"  rel="stylesheet" type="text/css"  />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/savedetails}" th:object="${details}" method="post" class="form-horizontal" role="form">
-					<h2>Doc details Form</h2>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{docName}" placeholder="Enter doc name" class="form-control" />
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{docType}" placeholder="Enter doc type" class="form-control" />
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{docAmount}" placeholder="Enter doc amount" class="form-control" />
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{tax}" placeholder="Enter tax" class="form-control" />
-						</div>
-					</div>
-					
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{taxType}" placeholder="Enter tax type" class="form-control" />
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Submit</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-
 	
+<body id="login-abc">
+
+<div class="container">
+	<div class="row">
+		<h2>Insert Details</h2>
+    	<form autocomplete="off" action="#" th:action="@{/savedetails}" th:object="${details}" method="post" class="form-signin mg-btm" role="form">
+			
+			<div class="main">	
+       
+				<input type="text" th:field="*{docName}" placeholder="Enter doc name" class="form-control" />
+				<input type="text" th:field="*{docType}" placeholder="Enter doc type" class="form-control" />
+				<input type="text" th:field="*{docAmount}" placeholder="Enter doc amount" class="form-control" />
+				<input type="text" th:field="*{tax}" placeholder="Enter tax" class="form-control" />
+				<input type="text" th:field="*{taxType}" placeholder="Enter tax type" class="form-control" />
+				
+				<br />
+				<button type="submit" class="btn btn-danger" style="padding: 10px;">Submit</button>
+				
+				<span class="clearfix"></span>	
+        	</div>
+      </form>
+	</div>
+</div>
 
 </body>
 </html>
