--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -4,7 +4,7 @@
 	padding-bottom: 10px;
 	margin:10px;
 	display: inline-block;
-	background-color:#ffe6ff;
+	background-color:#e6ffff;
 	word-break: break-all;
 	transition: box-shadow 0.2s;
 	box-shadow: 2px 2px 1px 1px lightgrey;
