--- a/src/main/webapp/WEB-INF/templates/viewTaxDetails.html
+++ b/src/main/webapp/WEB-INF/templates/viewTaxDetails.html
@@ -27,5 +27,8 @@
 		Tax        : <a th:text="${tax}"></a><br />
 		Tax-Type   : <a th:text="${taxType}"></a>
 	</div>
+	
+	<span><a th:href="${'docdetails'}">All Detail</a></span>
+	
 </body>
 </html>
